<resources>
    <string name="app_name">제로페이 2019</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottomFirst">홈</string>
    <string name="bottomSecond">가맹점</string>
    <string name="bottomThird">공지사항</string>
    <string name="bottomFourth">설정</string>
    <string name="register_member">회원가입</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="find_id">아이디 찾기</string>
    <string name="login">로그인</string>
    <string name="password">Password</string>
    <string name="id">ID</string>
    <string name="zeropay_2019">ZeroPay 2019</string>
    <string name="title_activity_maps">Map</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="address">address</string>
    <string name="email">email</string>
    <string name="set_transaction_password">거래 비밀번호 설정</string>
    <string name="register_complete">가입완료</string>
    <string name="register_cancel">취소</string>
    <string name="check_transaction_pw">비밀번호 입력</string>
    <string name="reset_transaction_pw">재배열</string>
    <string name="delete_password">지움</string>
</resources>
