<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="tranViewModel"
            type="com.seoul.app.zeropay_client.model.TransactionViewModel" />

        <variable
            name="fragment"
            type="com.seoul.app.zeropay_client.ui.TransactionPWFragment" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#EBC758"
            android:orientation="vertical">

            <TextView
                android:id="@+id/transaction_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="130dp"
                android:gravity="center"
                android:text="@string/check_transaction_pw"
                android:textColor="#313131"
                android:textSize="23sp" />


            <LinearLayout
                android:id="@+id/parent_imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/transaction_imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/dot2_24dp"
                    android:tag="1" />

                <ImageView
                    android:id="@+id/transaction_imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/dot2_24dp"
                    android:tag="2" />

                <ImageView
                    android:id="@+id/transaction_imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/dot2_24dp"
                    android:tag="3" />

                <ImageView
                    android:id="@+id/transaction_imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/dot2_24dp"
                    android:tag="4" />
            </LinearLayout>

            <TextView
                android:id="@+id/transaction_pw_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#D50000"
                android:textSize="19sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:background="@color/loginPageBackgroundColor"
            android:orientation="vertical"
            android:weightSum="4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/transaction_num_p1"
                    style="@style/Widget.ZeroPay.Button.Transaction"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="@{()->fragment.pressTransactionPW(true,tranViewModel.transactionNumList.get(0))}"
                    android:text="@{tranViewModel.transactionNumList.get(0)}" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/transaction_num_p2"
                    style="@style/Widget.ZeroPay.Button.Transaction"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="@{()->fragment.pressTransactionPW(true,tranViewModel.transactionNumList.get(1))}"
                    android:text="@{tranViewModel.transactionNumList.get(1)}" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/transaction_num_p3"
                    style="@style/Widget.ZeroPay.Button.Transaction"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="@{()->fragment.pressTransactionPW(true,tranViewModel.transactionNumList.get(2))}"
                    android:text="@{tranViewModel.transactionNumList.get(2)}" />



            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/transaction_num_p4"
                    style="@style/Widget.ZeroPay.Button.Transaction"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="@{()->fragment.pressTransactionPW(true,tranViewModel.transactionNumList.get(3))}"
                    android:text="@{tranViewModel.transactionNumList.get(3)}" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/transaction_num_p5"
                    style="@style/Widget.ZeroPay.Button.Transaction"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="@{()->fragment.pressTransactionPW(true,tranViewModel.transactionNumList.get(4))}"
                    android:text="@{tranViewModel.transactionNumList.get(4)}" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/transaction_num_p6"
                    style="@style/Widget.ZeroPay.Button.Transaction"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="@{()->fragment.pressTransactionPW(true,tranViewModel.transactionNumList.get(5))}"
                    android:text="@{tranViewModel.transactionNumList.get(5)}" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/transaction_num_p7"
                    style="@style/Widget.ZeroPay.Button.Transaction"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="@{()->fragment.pressTransactionPW(true,tranViewModel.transactionNumList.get(6))}"
                    android:text="@{tranViewModel.transactionNumList.get(6)}" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/transaction_num_p8"
                    style="@style/Widget.ZeroPay.Button.Transaction"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="@{()->fragment.pressTransactionPW(true,tranViewModel.transactionNumList.get(7))}"
                    android:text="@{tranViewModel.transactionNumList.get(7)}" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/transaction_num_p9"
                    style="@style/Widget.ZeroPay.Button.Transaction"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="@{()->fragment.pressTransactionPW(true,tranViewModel.transactionNumList.get(8))}"
                    android:text="@{tranViewModel.transactionNumList.get(8)}" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/reset_transaction_btn"
                    style="@style/Widget.ZeroPay.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/reset_transaction_pw" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/transaction_num_p0"
                    style="@style/Widget.ZeroPay.Button.Transaction"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="@{()->fragment.pressTransactionPW(true,tranViewModel.transactionNumList.get(9))}"
                    android:text="@{tranViewModel.transactionNumList.get(9)}" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/transaction_delete_btn"
                    style="@style/Widget.ZeroPay.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="@{() -> fragment.deletePressed(false)}"
                    android:text="@string/delete_password" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>